--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang=en>
   <head>
+    <link rel="stylesheet" type="text/css" href="./main.css">
   </head>
   <body>
     <h1>Michael Laurence Smith</h1>
