--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <h1>Michael Laurence Smith</h1>
     <h2>Junior Web Developer</h2>
     <div class="container">
-      <img src="https://lh4.googleusercontent.com/0zU-mHBxBWCnAdICE-uRo5Q1EyCyXit9kStw97VXvyQkzYejRtpD6k8PlaCy0AY19igbO1OGbabJJ0Y=w1920-h960">
-      <div>
+      <img src="http://i.imgur.com/uLEGbRu.jpg">
+     <div>
         <p>Hi! Thanks for visiting my site. I'm a Toronto-area web developer, with a background in broadcast media and written communications. After almost entering web development around 2000, I chose to go into TV/Radio production. I loved it, but found I was being drawn into administrative positions. I left the industry and tried my hand a few different things, including writing fiction for about 5 years. This is tough industry to earn a living from, but I loved writing.</p>
         <p>In the fall of 2015 I took a web development bootcamp at BrainStation, here in Toronto. I loved it. Since finishing that, I've been working as a freelance web developer, working mainly with a designer building custom themes in WordPress. From me, you'll get a well-rounded person, who is technically inclined and also creatively inspired.</p>
         <p>Here are a few of the projects I've worked on:</p>
