--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <p>In the fall of 2015 I took a web development bootcamp at BrainStation, here in Toronto. I loved it. Since finishing that, I've been working as a freelance web developer, working mainly with a designer building custom themes in WordPress. From me, you'll get a well-rounded person, who is technically inclined and also creatively inspired.</p>
         <p>Here are a few of the projects I've worked on:</p>
         <ul>
-          <li><a href="wearemovementmedia.com">Movement Media</a>: A PR agency in Washington D.C.</li>
-          <li><a href="andalsotoo.net">And Also Too</a>: A Design Firm in Toronto</li>
+          <li><a href="http://wearemovementmedia.com">Movement Media</a>: A PR agency in Washington D.C.</li>
+          <li><a href="http://andalsotoo.net">And Also Too</a>: A Design Firm in Toronto</li>
           <li><a href="https://michaellsmith.github.io/recipeBox/">Recipe Box</a>: A personal project in React/Redux</li>
           
         </ul>
