adding bulma,npm

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang=en>
   <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.com/libraries/bulma">
     <link rel="stylesheet" type="text/css" href="./main.css">
   </head>
   <body>
@@ -16,9 +18,9 @@
           <li><a href="http://wearemovementmedia.com">Movement Media</a>: A PR agency in Washington D.C.</li>
           <li><a href="http://andalsotoo.net">And Also Too</a>: A Design Firm in Toronto</li>
           <li><a href="https://michaellsmith.github.io/recipeBox/">Recipe Box</a>: A personal project in React/Redux</li>
-          
+
         </ul>
       </div>
     </div>
-    
+
   </body>
