--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <html lang=en>
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.com/libraries/bulma">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.3/css/bulma.min.css">
     <link rel="stylesheet" type="text/css" href="./main.css">
   </head>
   <body>
     <div class="container">
+
+
+
      <h1>Michael Laurence Smith</h1>
      <h2>Junior Web Developer</h2>
-     <img src="http://i.imgur.com/uLEGbRu.jpg">
+     <figure class="image 16by9">
+       <img src="http://i.imgur.com/uLEGbRu.jpg">
+     </figure>
      <div>
         <p>Hi! Thanks for visiting my site. I'm a Toronto-area web developer, with a background in broadcast media and written communications. After almost entering web development around 2000, I chose to go into TV/Radio production. I loved it, but found I was being drawn into administrative positions. I left the industry and tried my hand a few different things, including writing fiction for about 5 years. This is tough industry to earn a living from, but I loved writing.</p>
         <p>In the fall of 2015 I took a web development bootcamp at BrainStation, here in Toronto. I loved it. Since finishing that, I've been working as a freelance web developer, working mainly with a designer building custom themes in WordPress. From me, you'll get a well-rounded person, who is technically inclined and also creatively inspired.</p>
