--- a/index.html
+++ b/index.html
@@ -1,31 +1,62 @@
 <!DOCTYPE html>
 <html lang=en>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.3/css/bulma.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+
     <link rel="stylesheet" type="text/css" href="./main.css">
   </head>
   <body>
-    <div class="container">
-
-
-
-     <h1>Michael Laurence Smith</h1>
-     <h2>Junior Web Developer</h2>
-     <figure class="image 16by9">
-       <img src="http://i.imgur.com/uLEGbRu.jpg">
-     </figure>
-     <div>
-        <p>Hi! Thanks for visiting my site. I'm a Toronto-area web developer, with a background in broadcast media and written communications. After almost entering web development around 2000, I chose to go into TV/Radio production. I loved it, but found I was being drawn into administrative positions. I left the industry and tried my hand a few different things, including writing fiction for about 5 years. This is tough industry to earn a living from, but I loved writing.</p>
-        <p>In the fall of 2015 I took a web development bootcamp at BrainStation, here in Toronto. I loved it. Since finishing that, I've been working as a freelance web developer, working mainly with a designer building custom themes in WordPress. From me, you'll get a well-rounded person, who is technically inclined and also creatively inspired.</p>
-        <p>Here are a few of the projects I've worked on:</p>
-        <ul>
-          <li><a href="http://wearemovementmedia.com">Movement Media</a>: A PR agency in Washington D.C.</li>
-          <li><a href="http://andalsotoo.net">And Also Too</a>: A Design Firm in Toronto</li>
-          <li><a href="https://michaellsmith.github.io/recipeBox/">Recipe Box</a>: A personal project in React/Redux</li>
-
-        </ul>
-      </div>
+<div class="container">
+  <nav class="navbar navbar-toggleable-md nav-font">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-text name-font">
+      <h3 class="">Michael Laurence Smith</h3>
+      <h5 class="subheading">Junior Web Developer</h5>
     </div>
+    <!-- <div class="navbar-text mx-auto"> -->
+      <ul class="nav mx-auto link-font">
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.linkedin.com/in/michaellaurencesmith/">LinkedIn Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/MichaelLSmith?tab=repositories">Github Repositories</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="mailto:mlsmith45@gmail.com">Contact</a>
+        </li>
+      </ul>
+      <!-- <span><a href="https://www.linkedin.com/in/michaellaurencesmith/">LinkedIn Profile</a></span>
+      <span><a href="https://github.com/MichaelLSmith?tab=repositories">Github Repositories</a></span>
+      <span><a href="mailto:mlsmith45@gmail.com">Contact</a></span> -->
+    <!-- </div> -->
+  </nav>
+</div>
+    <div class="container ">
+      <div class="row">
+        <div class="col-md-5">
+          <figure class="">
+            <img class="img-fluid bio-img" alt="Responsive image" src="http://i.imgur.com/uLEGbRu.jpg">
+          </figure>
+        </div>
+       <div class="col-md-7 body-text">
+          <p>Hi. Thanks for visiting my site!</p>
+          <p> I'm a Toronto-area web developer, with a background in broadcast media and written communications. After almost entering web development around 2000, I chose to go into TV/Radio production. I loved it, but found I was being drawn into administrative positions.</p>
+          <p>I left the industry and tried my hand a few different things, including writing fiction for about 5 years. This is tough industry to earn a living from, but I loved writing.</p>
+          <p>In the fall of 2015 I took a web development bootcamp at <a href="https://brainstation.io/">BrainStation</a>, here in Toronto. I loved it. Since finishing that, I've been working as a freelance web developer, working mainly with a designer building custom themes in WordPress. From me, you'll get a well-rounded person, who is technically inclined and also creatively inspired.</p>
+          <p>Here are a few of the projects I've worked on:</p>
+          <ul>
+            <li><a href="http://wearemovementmedia.com">Movement Media</a>: A PR agency in Washington D.C.</li>
+            <li><a href="http://andalsotoo.net">And Also Too</a>: A Design Firm in Toronto</li>
+            <li><a href="https://michaellsmith.github.io/recipeBox/">Recipe Box</a>: A personal project in React/Redux</li>
+          </ul>
+        </div>
+      </div><!-- row  --></div>
 
+      <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
   </body>
