--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </div>
     <div class="container ">
       <div class="row">
-        <div class="col-md-5">
+        <div class="col-md-5 left-col-pos">
           <figure class="">
             <img class="img-fluid bio-img" alt="Responsive image" src="http://i.imgur.com/uLEGbRu.jpg">
           </figure>
@@ -47,14 +47,18 @@
           <p> I'm a Toronto-area web developer, with a background in broadcast media and written communications. After almost entering web development around 2000, I chose to go into TV/Radio production. I loved it, but found I was being drawn into administrative positions.</p>
           <p>I left the industry and tried my hand a few different things, including writing fiction for about 5 years. This is tough industry to earn a living from, but I loved writing.</p>
           <p>In the fall of 2015 I took a web development bootcamp at <a href="https://brainstation.io/">BrainStation</a>, here in Toronto. I loved it. Since finishing that, I've been working as a freelance web developer, working mainly with a designer building custom themes in WordPress. From me, you'll get a well-rounded person, who is technically inclined and also creatively inspired.</p>
-          <p>Here are a few of the projects I've worked on:</p>
-          <ul>
-            <li><a href="http://wearemovementmedia.com">Movement Media</a>: A PR agency in Washington D.C.</li>
-            <li><a href="http://andalsotoo.net">And Also Too</a>: A Design Firm in Toronto</li>
-            <li><a href="https://michaellsmith.github.io/recipeBox/">Recipe Box</a>: A personal project in React/Redux</li>
-          </ul>
         </div>
       </div><!-- row  --></div>
+        <div class="container grey-bckground">
+          <h5 class="align-center">Here are a few of the projects I've worked on:</h5>
+          <div class="flex-container-center">
+            <ul>
+              <li><a href="http://wearemovementmedia.com">Movement Media</a>: A PR agency in Washington D.C.</li>
+              <li><a href="http://andalsotoo.net">And Also Too</a>: A Design Firm in Toronto</li>
+              <li><a href="https://michaellsmith.github.io/recipeBox/">Recipe Box</a>: A personal project in React/Redux</li>
+            </ul>
+          </div>
+        </div>
 
       <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
