--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </button>
     <div class="navbar-text name-font">
       <h3 class="">Michael Laurence Smith</h3>
-      <h5 class="subheading">Junior Web Developer</h5>
+      <h5 class="subheading">Web Developer</h5>
     </div>
     <!-- <div class="navbar-text mx-auto"> -->
       <ul class="nav mx-auto link-font">
